# Kataglyphis-PythonProjectTemplate

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflow/: build-docs.yml  packaging-binaries-linux-x86-64.yml  pytest-matrix.yml  static-analysis.yml  windows-2025.yml
.github/workflows/: build-docs.yml  packaging-binaries-linux-x86-64.yml  packaging-binaries-linux.yml  packaging-binaries-windows-x64.yml  packaging-binaries-windows-x86-64.yml  packaging-sources.yml  pytest-matrix.yml  static-analysis.yml  ubuntu-24.04-arm.yml  ubuntu-24.04.yml  windows-2025.yml
bench/: demo.py  demo_line_profiler.py  demo_memory_profiling.py  demo_py_spy.py  demo_pytest_benchmark.py
docs/: GPU_MONITORING.md  SYSTEM_MONITORING.md
docs/source/: conf.py  index.rst
examples/: demo_system_monitoring.py
kataglyphispythonpackage/: core.py  fib.py  system_monitor.py  visualize_monitor.py
resources/packaging/binary/: MANIFEST.in
resources/packaging/sources/: MANIFEST.in
scripts/linux/: setup-dependencies.sh
scripts/windows/: setup-dependencies.ps1
tests/unit/: test_dummy.py  test_system_monitor.py
