[build-system]
requires = ["setuptools>=70.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "data*", "docs*", "demo*"]

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[project]
name = "kataglyphispythonpackage"
dynamic = ["version"]
authors = [{ name = "Jonas Heinle", email = "jonasheinle@googlemail.com" }]
description = "Lore ipsum."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["computer vision", "object detection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = ["numpy>=1.21.0,<2.0.0", "loguru", "tqdm"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pylint",
    "flake8",
    "codespell",
    "black",
    "mypy",
    "bandit",
    "vulture",
]

docs = ["sphinx", "sphinx_rtd_theme", "myst-parser"]

dev = ["black", "mypy", "bandit", "ruff"]

[project.urls]
Homepage = "https://github.com/Kataglyphis/Kataglyphis-PythonProjectTemplate"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
exclude = [
    'data/',
    'models/',
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$", # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
xfail_strict = true


[tool.vulture]
exclude = [
    'data/',
    'models/',
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$", # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["ipa364pythonpackage", "demo", "tests"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.uv.workspace]
